this will be the death of me.  added enough padding to min-width to ensure we don't have to wrap the rows.  gah

--- a/app/assets/stylesheets/seatmap.css
+++ b/app/assets/stylesheets/seatmap.css
@@ -64,9 +64,16 @@
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
+    padding: 0;
 }
 
 /* WARNING: do not override the following, or seatmap background image won't display correctly */
+
+.map-container {
+    margin: 0;
+    padding: -1px;
+}
 
 img.seating-charts-overlay {
     border: 1px solid red;
